apps/production/lulo-cms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lulo-cms
  namespace: lulo
  labels:
    app: lulo-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lulo-cms
  template:
    metadata:
      labels:
        app: lulo-cms
        name: lulo-cms
    spec:
      containers:
      - name: lulo-cms
        image: "registry.yesidlopez.de/lulo-cms:cms-v1.6.0" # {"$imagepolicy": "lulo:lulo-cms"}
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: registry-secret
