apps/production/lulo-cms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lulo-cms-ingress
  namespace: lulo
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cms.luloai.com
      secretName: lulo-cms-tls
  rules:
    - host: cms.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lulo-cms
                port:
                  number: 3000
